--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "body-parser": "^1.13.3",
     "bootstrap": "~3.3.7",
     "bootstrap-social": "^5.0.0",
+    "braintree-web": "^3.6.0",
     "composable-middleware": "^0.3.0",
     "cookie-parser": "^1.3.5",
     "core-js": "^2.2.1",
+    "dotenv": "^2.0.0",
     "ejs": "^2.3.3",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
